package com.aaron.justlike.collection.element;

/**
 * @author Aaron aaronzheng9603@gmail.com
 */
interface IElementCommunicable {

    void onDelete(String path, boolean isListEmpty);
}
